ops/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - battle-bridge.lsst.rocks
      secretName: wildcard-lsst-rocks
  rules:
    - host: battle-bridge.lsst.rocks
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-jenkins
              servicePort: 8080
